beyond-slate-editor/modules/home/sass/styles.scss
.page-container {
  background: var(--primary-surface);

  min-height: 100vh;

  display: flex;
  align-items: center;
  justify-content: center;

  .editor-container {
    padding: 0 3rem;
    margin: 10% 0;
    min-width: 80%;

    header {
      background: var(--secondary-primary);
      padding: 1rem;

      display: flex;
      align-items: center;
      justify-content: space-between;
  
      .options {
        button.option {
          color: var(--text-color);
  
          font-size: bold;
          border: 0;
          
          padding: 0 1rem;
        }
  
        .file-input {
          display: none;
          opacity: 0;
        }
      }

      .save-button {
        background: var(--accent-color);
        border-radius: 5px;
        color: var(--text-color);
        padding: .5rem 1rem;
      }
    }
  
    .beyond-editor {
      background: var(--primary);
      border-radius: 5px;

      min-height: 50vh;
  
      padding: 1.5rem;





      // NODES
  
      p {
        font-weight: normal;
        font-size: 1.2rem;
        margin: .2rem;
        display: inline-block;
      }

      br {
        display: block;
      }

      a {
        font-size: 1.2rem;
      };

      pre {
        margin: 0;

        code {
          background: var(--secondary-light);
          border-radius: 5px;
          font-size: .9rem;
          padding: .2rem;
        }
      }

      img {
        width: 100%;

      }
    }
  }
}

